ecmascript/parser/tests/test262-error-references/fail/d5512eff7d8174e4.js.stderr
error: Unexpected token `.`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/d5512eff7d8174e4.js:1:8
  |
1 | ({*a([a.b]){}})
  |        ^

